# C-plusspluss-Projekt

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: harjutused.json  kasutajad.json  kavad.json  plaanid.json
include/: infoKuvaja.h  jsonHaldaja.h  kasutaja.h  treeningkava.h  trenniGeneraator.h
src/: infoKuvaja.cpp  jsonHaldaja.cpp  kasutaja.cpp  main.cpp  treeningkava.cpp  trenniGeneraator.cpp
